# GreenBore-AI

./: .env.example  .gitattributes  .gitignore  PROJECT_STATE.md  README.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: __init__.py  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: assistant.py  health.py  models.py  predictions.py  simulation.py
backend/core/: config.py  database.py  logging_config.py
backend/ml/: __init__.py  inference.py  pipeline.py  registry.py  schema.py  tracker.py
backend/prompts/: __init__.py  explanation.txt  manager.py  rag_assistant.txt  recommendation.txt
backend/rag/: __init__.py  assistant.py  embeddings.py  ingester.py  llm.py  models.py  pipeline.py  schema.py  vector_store.py
backend/synthetic/: __init__.py  generator.py  pipeline.py  schema.py
backend/tests/: conftest.py  test_api.py  test_health.py  test_ml.py  test_rag.py  test_synthetic.py
datasets/: .gitkeep
datasets/geological_knowledge/: fracture_zones_groundwater.txt  groundwater_resistivity_guide.txt  porosity_permeability_aquifers.txt  rock_types_aquifer_behavior.txt  sensor_anomaly_troubleshooting.txt  well_drilling_casing_standards.txt
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: AssistantChat.tsx  DataGenerator.tsx  GeologicalMap.tsx  ModelManager.tsx  PetrophysicalLogChart.tsx  Subsurface3DViewer.tsx
scripts/: seed_knowledge_base.py
