[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greenbore-backend"
version = "0.1.0"
description = "FastAPI Backend for GreenBore AI Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Allow Depends() in FastAPI route defaults
    "E501",  # Defer line length to formatter; allow long string literals/comments for readability
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"backend" = "."}
packages = [
    "backend",
    "backend.core",
    "backend.api",
    "backend.api.v1",
    "backend.api.v1.endpoints"
]
